--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,11 @@
         "maatwebsite/excel": "^3.1"
     },
     "require-dev": {
+        "enlightn/laravel-security-checker": "^1.0",
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.0.1",
+        "laravel/telescope": "^4.7",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^5.10",
         "phpunit/phpunit": "^9.5.10"
